change the sign in button to profile

--- a/code/templates/aboutus.html
+++ b/code/templates/aboutus.html
@@ -883,6 +883,7 @@
     <script src="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
