change the sign in button to profile for all page

--- a/code/templates/blog-grid-two.html
+++ b/code/templates/blog-grid-two.html
@@ -750,6 +750,7 @@
     <script src="../static/js_test/TweenMax.min.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
