--- a/code/templates/post-edit.html
+++ b/code/templates/post-edit.html
@@ -402,6 +402,7 @@
     <script src="../static/js_test/jquery.wavify.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
     <script>
     // Prevent the default form submission and handle the submission via JavaScript
     // 自定义弹窗函数：显示弹窗，并在点击按钮后执行回调（例如页面重定向）
