--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -732,6 +732,7 @@
     <script src="../static/assets/tooltipster/js/tooltipster.bundle.min.js"></script>
     <script src="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const chooseImageBtn = document.getElementById('chooseImageBtn');
