--- a/code/templates/blog-list.html
+++ b/code/templates/blog-list.html
@@ -706,6 +706,7 @@
     <script src="../static/assets/magnify-pop/jquery.magnific-popup.min.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
