--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -378,6 +378,7 @@
     <script src="../static/js_test/jquery.wavify.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // 获取所有博客文章和分类标签
