--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -472,6 +472,7 @@
     <script src="../static/assets/niceselectpicker/jquery.nice-select.min.js"></script>
     <script src="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
