--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -639,6 +639,7 @@
     <script src="../static/js_test/jquery.wavify.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 <script>
     const postsPerPage = 5;
