--- a/code/templates/forums.html
+++ b/code/templates/forums.html
@@ -648,6 +648,7 @@
     <script src="../static/js_test/jquery.wavify.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
