--- a/code/templates/job-recommendation.html
+++ b/code/templates/job-recommendation.html
@@ -448,6 +448,7 @@ select.form-select:active {
         <script src="../static/js_test/jquery.wavify.js"></script>
         <script src="../static/assets/wow/wow.min.js"></script>
         <script src="../static/js_test/main.js"></script>
+        <script src="../static/js/change-button.js"></script>
         <script>
             $(document).ready(function () {
                 // 初始化提示工具
