--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -563,6 +563,7 @@
     <script src="../static/assets/niceselectpicker/jquery.nice-select.min.js"></script>
     <script src="../static/assets/tooltipster/js/tooltipster.bundle.min.js"></script>
     <script src="../static/assets/mcustomscrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="../static/js/change-button.js"></script>
     <!-- 最后加载 main.js -->
     <script src="../static/js_test/main.js"></script>
 
