--- a/code/templates/mental-health.html
+++ b/code/templates/mental-health.html
@@ -580,6 +580,7 @@
     <script src="../static/js_test/jquery.wavify.js"></script>
     <script src="../static/assets/wow/wow.min.js"></script>
     <script src="../static/js_test/main.js"></script>
+    <script src="../static/js/change-button.js"></script>
 </body>
 
 </html>
