change the upper bar of profile

--- a/code/templates/forum-topics.html
+++ b/code/templates/forum-topics.html
@@ -124,7 +124,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn" href="#">Free Trail</a>
+                    <a class="nav_btn" href="/signin" id="auth-button">Sign In</a>
                 </div>
             </div>
         </nav>
