--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -147,7 +147,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <a class="nav_btn" href="signin.html" id="signin-link">Sign In</a>
+                    <a class="nav_btn" href="/signin" id="auth-button">Sign In</a>
                 </div>
             </div>
         </nav>
