fix about us link for every page

--- a/code/templates/edit-post.html
+++ b/code/templates/edit-post.html
@@ -140,7 +140,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="aboutus.html" class="nav-link">
+                                    <a href="/about-us" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
