--- a/code/templates/blog.html
+++ b/code/templates/blog.html
@@ -92,7 +92,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="aboutus.html" class="nav-link">
+                                    <a href="/about-us" class="nav-link">
                                         <img src="../static/img/sheet.png" alt="">
                                         <div class="text">
                                             <h5>About Us</h5>
@@ -174,7 +174,7 @@
                         <div class="b_top_post_content">
                             <div class="post_tag">
                                 <a href="#">9 Min Read</a>
-                                <a class="c_blue" href="aboutus.html">Official</a>
+                                <a class="c_blue" href="/about-us">Official</a>
                             </div>
                             <h3>Women in Private Security</h3>
                             <p>Hear some women working for ICoCA Member and Affiliate companies as they reflect on the challenges they face working in the private security industry, as well as the opportunities that lie ahead.</p>
