--- a/code/templates/aboutus.html
+++ b/code/templates/aboutus.html
@@ -249,7 +249,7 @@
             <div class="communities-boxes">
                     <div class="HerBlossom-com-box wow fadeInRight" data-wow-delay="0.5s">
                         <div class="icon-container">
-                            <img src="../static/images/Boran.JPG" alt="communinity-box">
+                            <img src="../static/images/Boran.jpg" alt="communinity-box">
                         </div>
                         <div class="HerBlossom-com-box-content">
                             <h3 class="title"><a href="forums.html"> Boran Duan</a></h3>
@@ -285,7 +285,7 @@
 
                     <div class="HerBlossom-com-box wow fadeInRight" data-wow-delay="1.1s">
                         <div class="icon-container">
-                            <img src="../static/images/Yani.JPG" alt="communinity-box">
+                            <img src="../static/images/Yani.jpg" alt="communinity-box">
                         </div>
                         <div class="HerBlossom-com-box-content">
                             <h3 class="title"><a href="forums.html"> Yani Yang</a></h3>
@@ -297,7 +297,7 @@
 
                     <div class="HerBlossom-com-box wow fadeInRight" data-wow-delay="1.3s">
                         <div class="icon-container">
-                            <img src="../static/images/Zihan.JPG" alt="communinity-box">
+                            <img src="../static/images/Zihan.jpg" alt="communinity-box">
                         </div>
                         <div class="HerBlossom-com-box-content">
                             <h3 class="title"><a href="forums.html"> Zihan Miao</a></h3>
