--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -143,11 +143,11 @@ background-color: #FFE5E5;
     }
 
     .comment {
-        background-color: #FFCCE5; /* 浅粉色背景 */
+        background-color: #FFE6F0; /* 浅粉色背景 */
         border-radius: 15px; /* 圆角 */
         padding: 10px;
         margin-bottom: 10px; /* 每条评论间距 */
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* 轻微阴影 */
+        /*box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* 轻微阴影 */
         transition: transform 0.2s ease, background-color 0.3s ease;
     }
 
@@ -171,7 +171,7 @@ background-color: #FFE5E5;
         float: right;
         font-size: 12px;
         color: #585858;
-        margin-top: -10px;
+        margin-top: -11px;
 font-family: 'Dancing Script', cursive;
     }
 
